[metadata]
name = network_design_tool
version = attr: networkdesigntool.__version__
author = Bautista Coronado
author_email = bauticoro@gmail.com
description = Simple Network Design Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bauticoro/network_design_tool
project_urls =
    Bug Tracker = -
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = networkdesigntool
install_requires =
    ticdat>=0.2.21
    pandas>=0.18.1
    gurobipy==9.5.0
python_requires = >=3.6
